@@ -10,13 +10,13 @@
   Quote a string to be passed to an operating system shell.
 }
 \usage{
-shQuote(string, type = c("sh", "csh", "cmd"))
+shQuote(string, type = c("sh", "csh", "cmd", "cmd2"))
 }
 \arguments{
   \item{string}{a character vector, usually of length one.}
-  \item{type}{character: the type of shell.  Partial matching is
-    supported.  \code{"cmd"} refers to the Windows NT shell, and is the
-    default under Windows.}
+  \item{type}{character: the type of shell quoting.  Partial matching is
+    supported.  \code{"cmd"} and \code{"cmd2"} refer to the Windows shell.
+    \code{"cmd"} is the default under Windows.} 
 }
 \details{
   The default type of quoting supported under Unix-alikes is that for
@@ -36,32 +36,34 @@ shQuote(string, type = c("sh", "csh", "cmd"))
   exclamation mark and double quote).  As a last resort, we need to
   split the string into pieces not containing single quotes and surround
   each with single quotes, and the single quotes with double quotes.
-
-#ifdef windows
-  The Windows shell supports only double quoting.  All this
-  implementation does is to surround the string by double quotes and
-  escape internal double quotes by a backslash.  As Windows path names
-  cannot contain double quotes, this makes \code{shQuote} safe for use
-  with file paths in \code{\link{system}}, and with \code{\link{shell}}
-  if the default shell is used.
-
-  It will usually be safe to use \code{shQuote} to quote arguments of a
-  command, but because \code{\link{system}} does not use a shell,
-  interpretation of quoted arguments is done by the run-time code of the
-  executable.  This may depend on the compiler used: Microsoft's rules
-  for the C run-time are given at
-  \url{https://msdn2.microsoft.com/en-us/library/ms880421.aspx}.
-#endif
+  
+  In Windows, command line interpretation is done by the application
+  as well as the shell.  It may depend on the compiler used:
+  Microsoft's rules for the C run-time are given at 
+  \url{https://msdn.microsoft.com/library/ms880421}. It may depend on
+  the whim of the programmer of the application: check its
+  documentation.  The \code{type = "cmd"} quoting surrounds the string
+  by double quotes and escapes internal double quotes by a backslash.
+  As Windows path names cannot contain double quotes, this makes
+  \code{shQuote} safe for use with many applications when used with
+  \code{\link{system}} or \code{\link{system2}}.  The Windows
+  \command{cmd.exe} shell (used by default with \code{\link{shell}})
+  uses \code{type = "cmd2"} quoting:  special characters are prefixed
+  with \code{"^"}.  In some cases, two types of quoting should be
+  used:  first for the application, and then \code{type = "cmd2"} 
+  for \command{cmd.exe}.  See the examples below.  
 }
-\references{
-  Loukides, M. \emph{et al} (2002)
-  \emph{Unix Power Tools} Third Edition.  O'Reilly.  Section 27.12.
+  
+\references{ Loukides, M. \emph{et al} (2002) \emph{Unix Power Tools}
+  Third Edition. O'Reilly.  Section 27.12.
+  
+  Discussion in \PR{16636}.
 
 % gone in Jan 2015  
 % \url{http://www.mhuffman.com/Notes/dos/bash_cmd.htm}
 }
 \seealso{
-  \code{Quotes} for quoting \R code.
+  \link{Quotes} for quoting \R code.
 
   \code{\link{sQuote}} for quoting English text.
 }
@@ -77,8 +79,12 @@ cat(shQuote(tryit), "\n")
 \dontrun{system(paste("echo", shQuote(tryit)))}
 cat(shQuote(tryit, type = "csh"), "\n")
 
-## Windows-only example.
-perlcmd <- 'print "Hello World\\n";'
-\dontrun{shell(paste("perl -e", shQuote(perlcmd, type = "cmd")))}
+## Windows-only example, assuming cmd.exe:
+perlcmd <- 'print "Hello World\\\\n";'
+\dontrun{
+shell(shQuote(paste("perl -e", 
+                    shQuote(perlcmd, type = "cmd")),
+              type = "cmd2"))
+}
 }
 \keyword{utilities}
